# waitlist-manager

./: .envrc  Caddyfile  DESIGN.md  README.md  TASK.md  docker-compose.yml
apicollection/: add queue.bru  bruno.json  stream place status.bru
backend/: pyproject.toml
backend-go/: .env  go.mod  go.sum  main.go  worker.go
backend-go/constant/: const.go
backend-go/env/: env.go
backend-go/model/: place.go  queue.go
backend-go/routes/: queue.go  stream-place-status.go  stream-queue-status.go
backend-go/valkey/: valkey.go
backend-go/vk/: valkey.go
backend/backend/: main.py
frontend/: .env  bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: routeTree.gen.ts  vite-env.d.ts
frontend/src/components/: placeStatus.tsx
frontend/src/lib/: placeStatus.ts
frontend/src/routes/: __root.tsx  book.tsx  index.tsx  queue.$queueId.tsx
