[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ridho9 <p.ridho9@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
